fix bug on tablet image gap

--- a/responsive-design-images/styles.css
+++ b/responsive-design-images/styles.css
@@ -29,7 +29,7 @@
 }
 
 .photo img {
-  width: 100%
+  width: 100%;
   display: block;
 }
 
